@startuml DataModel

title Financial Data Model

class User {
    user_id
    email
}

class Account {
    account_id
    account_type
    currency
    balance
}

class Transaction {
    transaction_id
    account_id
    amount
    category
    date
    description
}

User "1" --> "many" Account
Account "1" --> "many" Transaction

@enduml